tests/ui/errors/snapshots/infer_function_arity_too_few.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Wrong argument count
   ╭─[test.lis:4:3]
 3 │   let add = |x: int, y: int| -> int { x + y };
 4 │   add(5)
   ·   ───┬──
   ·      ╰── expected `(int, int)`, found `(int)`
 5 │ }
   ╰────
  help: This function expects 2 arguments but received 1 argument · code: [infer.arg_count_mismatch]
