tests/ui/errors/snapshots/infer_function_returning_enum_as_pattern.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Variant not found
    ╭─[test.lis:10:5]
  9 │   match s {
 10 │     Make(x) => x,
    ·     ───┬───
    ·        ╰── no variant `Make` on `Status`
 11 │     _ => 1,
    ╰────
  help: Available variants for `Status` are `Active` and `Inactive` · code: [resolve.variant_not_found]
