tests/ui/errors/snapshots/infer_function_type_does_not_implement_interface.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `fn (int) -> int` does not implement `Display`
    ╭─[test.lis:15:15]
 14 │ fn main() {
 15 │   print_value(some_func);
    ·               ────┬────
    ·                   ╰── `Display` needed here
 16 │ }
    ╰────
  help: One method does not satisfy `Display`:
        Missing:
          fn show(self: fn (int) -> int) -> string
  code: [infer.interface_not_implemented]
