tests/ui/errors/snapshots/infer_function_value_with_concrete_param_where_unknown_param_expected.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
    ╭─[test.lis:11:9]
 10 │ fn test() -> int {
 11 │   apply(double)
    ·         ───┬──
    ·            ╰── expected `fn (Unknown) -> int`, found `fn (int) -> int`
 12 │ }
    ╰────
  help: Function types must match exactly, and `Unknown` matches only `Unknown`. Declare the function with the expected signature and narrow with `assert_type` inside, or wrap it in a closure that narrows at the call site · code: [infer.type_mismatch]
