tests/ui/errors/snapshots/infer_function_value_with_concrete_return_where_interface_return_expected.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
    ╭─[test.lis:17:7]
 16 │ fn test() -> string {
 17 │   run(make_foo_err)
    ·       ──────┬─────
    ·             ╰── expected `fn () -> error`, found `fn () -> FooError`
 18 │ }
    ╰────
  help: Function types must match exactly. Wrap the value in a closure to convert at the call site, e.g. `|value| callee(value)` · code: [infer.type_mismatch]
