tests/ui/errors/snapshots/infer_function_value_with_interface_param_where_concrete_param_expected.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
    ╭─[test.lis:17:7]
 16 │ fn test() -> Bar {
 17 │   run(Bar.Wrap)
    ·       ────┬───
    ·           ╰── expected `fn (FooError) -> Bar`, found `fn (error) -> Bar`
 18 │ }
    ╰────
  help: Function types must match exactly. Wrap the value in a closure to convert at the call site, e.g. `|value| callee(value)` · code: [infer.type_mismatch]
